update from state used for ucla drug use data

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
+pandas
 spacy
-en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.5.0/en_core_web_trf-3.5.0-py3-none-any.whl
 transformers
 torch
